--- a/TrabajoPractico3/package.json
+++ b/TrabajoPractico3/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
